crates/pixi-build-r/src/snapshots/pixi_build_r__build_script__tests__build_script@unix-native-no-extra-args.snap
---
source: crates/pixi-build-r/src/build_script.rs
expression: script
---
R --version



mkdir -p "$PREFIX/lib/R/library"



R CMD INSTALL --library=$PREFIX/lib/R/library \
    --no-lock \
    /path/to/package


if [ $? -ne 0 ]; then
    exit 1
fi
