crates/pixi-build-r/src/snapshots/pixi_build_r__build_script__tests__build_script@unix-pure-with-extra-args.snap
---
source: crates/pixi-build-r/src/build_script.rs
expression: script
---
R CMD --version



mkdir -p "$PREFIX/lib/R/library"



R CMD INSTALL --library=$PREFIX/lib/R/library \
    --no-lock \
    --no-multiarch \
    /path/to/package


if [ $? -ne 0 ]; then
    exit 1
fi
